--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -4,3 +4,4 @@ imports:
     - suites/ui/admin/rma/managing_return_reasons.yml
     - suites/ui/admin/rma/managing_return_consents.yml
     - suites/ui/admin/rma/managing_return_status.yml
+    - suites/ui/admin/rma/managing_return_notes.yml
