--- a/tests/Behat/Resources/suites/ui/admin/rma/managing_address_in_configuration.yml
+++ b/tests/Behat/Resources/suites/ui/admin/rma/managing_address_in_configuration.yml
@@ -7,6 +7,7 @@ default:
                 - sylius.behat.context.hook.email_spool
 
                 # setup
+                - sylius.behat.context.setup.geographical
                 - sylius.behat.context.setup.channel
                 - sylius.behat.context.setup.admin_security
                 - sylius.behat.context.setup.shop_security
@@ -15,6 +16,7 @@ default:
 
                 # transformers
                 - sylius.behat.context.transform.channel
+                - sylius.behat.context.transform.country
                 - sylius.behat.context.transform.shared_storage
                 - sylius.behat.context.transform.lexical
                 - sylius.behat.context.transform.shipping_method
