--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -2,6 +2,7 @@ imports:
     - suites/ui/credits.yml
     - suites/ui/shop/rma/auth.yml
     - suites/ui/shop/rma/submit_form.yml
+    - suites/ui/shop/rma/customer_area.yml
     - suites/ui/admin/rma/managing_return_reasons.yml
     - suites/ui/admin/rma/managing_return_consents.yml
     - suites/ui/admin/rma/managing_return_status.yml
