--- a/tests/Behat/Resources/suites/ui/credits.yml
+++ b/tests/Behat/Resources/suites/ui/credits.yml
@@ -1,3 +1,14 @@
+#
+# This file is part of package:
+# Sylius RMA Plugin
+#
+# @copyright MADCODERS Team (www.madcoders.co)
+# @licence For the full copyright and license information, please view the LICENSE
+#
+# Architects of this package:
+# @author Leonid Moshko <l.moshko@madcoders.pl>
+# @author Piotr Lewandowski <p.lewandowski@madcoders.pl>
+#
 default:
     suites:
         madcoders_credits:
